change overflow option in order to stop icons and texts to overflow their respective container

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ body {
     height: 90vh;
     background-color: hsl(0, 0%, 100%);
     max-width: 1200px;
-    border-radius: 20px;;
+    border-radius: 20px;
+    overflow:auto;
 }
 
 .leftBox {
